# MemCore

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PROJECT_STATE.md  README.md  docker-compose.yml  my_chatbot.py  pyproject.toml  test.py
.claude/agents/: debugger.md  implementer.md
.claude/hooks/: session-start.ps1
.github/workflows/: ci.yml
deploy/k8s/: README.md  api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  worker-deployment.yaml
docs/: api-reference.md  sdk-quickstart.md
docs/adr/: 0001-async-consolidation.md  0002-vector-store-qdrant.md  0003-graph-store-neo4j.md  0004-scheduler-celery-default.md  0005-postgres-source-of-truth.md  0006-hexagonal-architecture.md  0007-immutable-versioned-records.md  0008-multi-tenancy.md  0009-consolidation-model.md  0010-embeddings.md  0011-storage-adapter-conventions.md  0012-sql-metadata-store.md  0013-retrieval-engine.md  0014-consolidation-design.md  0015-importance-scoring.md  0016-decay-and-pruning.md  0017-evaluation-framework.md  0018-python-sdk.md  0019-observability.md  0020-deployment.md  0021-documentation-strategy.md  README.md
docs/design/: architecture.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  roadmap.md  taxonomy.md
docs/guides/: deployment.md  operations.md
docs/superpowers/plans/: 2026-07-02-workspace-setup.md  2026-07-04-phase-06-importance-scoring.md  2026-07-04-phase-07-decay-pruning.md  2026-07-04-phase-08-evaluation.md  2026-07-05-phase-09-python-sdk.md  2026-07-06-phase-10-observability.md  2026-07-06-phase-11-deployment.md  2026-07-10-phase-12-documentation.md
docs/superpowers/specs/: 2026-07-02-workspace-setup-design.md
examples/: README.md  memory_lifecycle.py  quickstart_async.py  quickstart_sync.py  sessions_and_consolidation.py
scripts/: generate_api_reference.py
src/memcore/: __init__.py  config.py  exceptions.py  logging.py
src/memcore/adapters/: __init__.py  factory.py
src/memcore/adapters/celery/: __init__.py  workflow.py
src/memcore/adapters/embeddings/: __init__.py  bge.py  openai.py
src/memcore/adapters/inmemory/: __init__.py  embedding.py  graph_store.py  llm.py  memory_store.py  object_store.py  vector_store.py  workflow.py  working_memory.py
src/memcore/adapters/llm/: __init__.py  anthropic.py  failover.py  ollama.py
src/memcore/adapters/neo4j/: __init__.py  graph_store.py
src/memcore/adapters/qdrant/: __init__.py  vector_store.py
src/memcore/adapters/redis/: __init__.py  working_memory.py
src/memcore/adapters/sql/: __init__.py  memory_store.py
src/memcore/api/: __init__.py  app.py  deps.py  middleware.py  routes.py  schemas.py
src/memcore/domain/: __init__.py  enums.py  models.py
src/memcore/evaluation/: __init__.py  __main__.py  datasets.py  harness.py  metrics.py  scenarios.py
src/memcore/observability/: __init__.py  context.py  metrics.py
src/memcore/ports/: __init__.py  embedding_provider.py  graph_store.py  llm_provider.py  memory_store.py  object_store.py  vector_store.py  workflow_engine.py  working_memory.py
src/memcore/sdk/: __init__.py  _shared.py  async_client.py  client.py  exceptions.py  models.py
src/memcore/services/: __init__.py  consolidation.py  context.py  decay.py  importance.py  memories.py  recall.py  sessions.py
src/memcore/testing/: __init__.py  contracts.py
src/memcore/workers/: __init__.py  celery_app.py
tests/: conftest.py
tests/integration/: test_backends.py
tests/unit/: test_adapter_helpers.py  test_api.py  test_api_observability.py  test_api_reference.py  test_config.py  test_consolidation.py  test_contracts_inmemory.py  test_decay.py  test_embedding_adapters.py  test_eval_harness.py  test_eval_metrics.py  test_eval_scenarios.py  test_examples.py  test_factory.py  test_importance.py  test_inmemory_adapters.py  test_llm_adapters.py  test_logging.py  test_memory_store_contract.py  test_models.py  test_observability_context.py  test_observability_metrics.py  test_package.py  test_recall_engine.py  test_sdk_async.py  test_sdk_shared.py  test_sdk_sync.py  test_services.py  test_workers.py  test_workflow.py
